--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/fiber": "^8.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.1",
     "three": "^0.148.0"
   },
   "devDependencies": {
