--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.9.1",
+    "@react-three/fiber": "8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
-    "three": "^0.148.0"
+    "three": "^0.145.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
