--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^9.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6",
     "react-router-dom": "^6.6.1",
     "three": "^0.145.0",
     "vite-plugin-glsl": "^1.1.2",
